Fix footer to bottom of each of the pages and add text shadow for contrast

--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -144,23 +144,23 @@ input {
     color: whitesmoke;
     width: 350px;
     height: 40px;
-    margin: 20px;
+    margin: 5px;
     font-size: 20px;
     text-shadow: 0 0 5px teal;
     outline: none;
     font-size: 20px;
-    border: 2px solid teal;
+    border: 1px solid whitesmoke;
     background: transparent;
 }
 
 button {
-    margin-left: 20px;
+    margin: 5px;
     width: 350px;
     height: 40px;
     font-size: 20px;
-    background: whitesmoke;
+    color: whitesmoke;
+    border: 1px solid whitesmoke;
     background-color: teal;
-    opacity: 0.85;
 }
 
 form h1 {
@@ -176,9 +176,9 @@ form h1 {
 /* footer styling */
 
 footer {
-    position: absolute;
+    position: fixed;
     text-align: center;
-    bottom: 0;
+    bottom: 10%;
     width: 100%;
     height: 60px;
 }
@@ -195,6 +195,6 @@ footer {
     font-size: 260%;
     margin: 1%;
     padding: 5%;
-    color: white;
-    text-shadow: 0 0 5px rgb(5, 5, 34);
+    color: teal;
+    text-shadow: 0 0 5px white;
 }
